--- a/app/views/cakes/_form.html.erb
+++ b/app/views/cakes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@cake) do |f| %>
+<%= form_for(@cake, html: { multipart: true }) do |f| %>
   <% if @cake.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@cake.errors.count, "error") %> prohibited this cake from being saved:</h2>
@@ -14,6 +14,11 @@
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :photo %><br />
+    <%= f.file_field :photo %>
+    <%= f.hidden_field :photo_cache %>
   </div>
   <div class="actions">
     <%= f.submit %>
