tidy up the detail page.

--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -1,10 +1,12 @@
-<p id="notice"><%= notice %></p>
+<h1><%= link_to @cake.name, cake_path(@cake) %></h1>
+<hr />
 
-<p>
-  <b>Name:</b>
-  <%= @cake.name %>
-</p>
-
-
-<%= link_to 'Edit', edit_cake_path(@cake) %> |
-<%= link_to 'Back', cakes_path %>
+<div class="row">
+  <div class="span6">
+    <ul class="thumbnails">
+      <li class="span6">
+        <a class="thumbnail" href="<%= url_for cake_path(@cake) %>"><img src="<%= @cake.photo.url %>" alt="<%= @cake.name %>" /></a>
+      </li>
+    </ul>
+  </div>
+</div>
