--- a/app/views/cakes/new.html.erb
+++ b/app/views/cakes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New cake</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', cakes_path %>
+<div class="row">
+  <div class="span12">
+    <%= render 'form' %>
+  </div>
+</div>
