--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,9 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="/categories/cakes">cakes</a></li>
-            <li><a href="/categories/donuts">donuts</a></li>
+          <% @categories.each do |category| %>
+            <li><%= link_to category.name, category_path(category) %></li>
+          <% end %>
           </ul>
           </li>
         </ul>
