--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,9 +8,9 @@
     <h1><%= @category.name %></h1>
     <ul class="thumbnails">
       <% @cakes.each do |cake| %>
-        <div class="span4">
+        <div class="span3">
         <div class="thumbnail">
-          <a href="<%= url_for cake %>"><img src="<%= cake.photo.url %>" /></a>
+          <a href="<%= url_for cake %>"><img src="<%= cake.photo.url(:thumb) %>" /></a>
           <div class="caption">
             <h3><a href="<%= url_for cake %>"><%= cake.name %></a></h3>
             <p><a class="btn" href="<%= url_for cake %>">View</a></p>
