--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -3,10 +3,7 @@
 
 <div class="row">
   <div class="span6">
-    <ul class="thumbnails">
-      <li class="span6">
-        <a class="thumbnail" href="<%= url_for cake_path(@cake) %>"><img src="<%= @cake.photo.url %>" alt="<%= @cake.name %>" /></a>
-      </li>
-    </ul>
+    <%= image_tag @cake.photo.url(:hero), alt: @cake.name, class: 'thumbnails' %>
   </div>
+  <div class="span6">&nbsp;</div>
 </div>
