--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,7 +10,7 @@
       <% @cakes.each do |cake| %>
         <div class="span3">
         <div class="thumbnail">
-          <a href="<%= url_for cake %>"><%= image_tag @cake.photo.url(:thumb), alt: @cake.name %></a>
+          <a href="<%= url_for cake %>"><%= image_tag cake.photo.url(:thumb), alt: cake.name %></a>
           <div class="caption">
             <h3><a href="<%= url_for cake %>"><%= cake.name %></a></h3>
             <p><a class="btn" href="<%= url_for cake %>">View</a></p>
