--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -1,9 +1,9 @@
-<h1><%= link_to @cake.name, cake_path(@cake) %></h1>
-<hr />
-
 <div class="row">
   <div class="span6">
     <%= image_tag @cake.photo.url(:hero), alt: @cake.name, class: 'thumbnail' %>
   </div>
-  <div class="span6">&nbsp;</div>
+  <div class="span6">
+    <h1><%= link_to @cake.name, cake_path(@cake) %></h1>
+    <hr />
+  </div>
 </div>
