remove help menu and sign in link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,16 +23,7 @@
         </ul>
       </div>
       <ul class="nav pull-right">
-        <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Privacy Policy</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Terms and Conditions</a></li>
-        </ul>
-        </li>
-        <li class="divider-vertical hidden-phone"></li>
-        <li> <a href="">Sign In</a> </li>
+        <li><%= link_to "share", new_cake_path %></li>
       </ul>
     </div>
   </div>
