add n+1 to view

--- a/app/views/cakes/index.html.erb
+++ b/app/views/cakes/index.html.erb
@@ -8,6 +8,7 @@
           <div class="caption">
             <h3><a href="<%= url_for cake %>"><%= cake.name %></a></h3>
             <p><a class="btn" href="<%= url_for cake %>">View</a></p>
+            <p><%= cake.category.name rescue 'N/A' %></p>
           </div>
         </div>
       </div>
