--- a/app/views/cakes/index.html.erb
+++ b/app/views/cakes/index.html.erb
@@ -6,7 +6,7 @@
         <div class="thumbnail">
           <a href="<%= url_for cake %>"><%= image_tag cake.photo.url(:thumb), alt: cake.name %></a>
           <div class="caption">
-            <h3><a href="<%= url_for cake %>"><%= cake.name %></a></h3>
+            <h3><a href="<%= url_for cake %>"><%= cake.name %></a> <small>by <%= cake.user.email %></small></h3>
             <p><a class="btn" href="<%= url_for cake %>">View</a></p>
             <p><%= cake.category.name rescue 'N/A' %></p>
           </div>
