--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="span6">
     <h1><%= link_to @cake.name, cake_path(@cake) %></h1>
+    <p>by <%= @cake.user.email %></p>
     <hr />
   </div>
 </div>
