--- a/app/views/cakes/index.html.erb
+++ b/app/views/cakes/index.html.erb
@@ -6,9 +6,10 @@
         <div class="thumbnail">
           <a href="<%= url_for cake %>"><%= image_tag cake.photo.url(:thumb), alt: cake.name %></a>
           <div class="caption">
-            <h3><a href="<%= url_for cake %>"><%= cake.name %></a> <small>by <%= cake.user.email rescue 'N/A' %></small></h3>
+            <h3><a href="<%= url_for cake %>"><%= cake.name %></a></h3>
+            <p><small>by <%= cake.user.email rescue 'N/A' %></small></p>
+            <p><span><i class="icon-tags"></i></span> <%= cake.category.name rescue 'N/A' %></p>
             <p><a class="btn" href="<%= url_for cake %>">View</a></p>
-            <p><%= cake.category.name rescue 'N/A' %></p>
           </div>
         </div>
       </div>
